--- a/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
+++ b/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Taller: Gestión de archivos y directorios en Bash.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,6 +199,385 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tLO8fEziKrsE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!touch ./practica-bash-1/1/1-1/_SUCCESS "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BdOIc9KqKru0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!touch ./practica-bash-1/1/1-1/_SUCCESS"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8MGvqzG3KrxG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "06c322f0-a85d-4c98-e688-7200c9950f6a"
+      },
+      "source": [
+        "!cd practica-bash-1"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/bin/bash: line 0: cd: practica-bash-1: No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZVDqDNbmMh8t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d1648315-b46c-404e-bb9b-f24547303310"
+      },
+      "source": [
+        "cd 1"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/practica-bash-1/1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GPC-S-i1PkMa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "10ab08f2-6805-4907-9b38-f70b43a8a9c8"
+      },
+      "source": [
+        "cd 1-1"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/practica-bash-1/1/1-1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "snHgH62MPb9q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f17c4d22-4610-451d-b9fc-4beb12361d1b"
+      },
+      "source": [
+        "pwd && ls"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/practica-bash-1/1/1-1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mIDLIjgLMhzo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp ./practica-bash-1/1/1-1/part-0 ./practica-bash-1/1/1-1/part-1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8ocHOKkMh22",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp part-0 part-2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o83YLb8tMh_d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mv part-0 part-0001"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RtYWR_RSP5SK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mv part-1 part-00001 && mv part-2 part-00002 "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dh9VwXb0QL6k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8d722d3e-9b31-494e-ec78-b31160d5f6f0"
+      },
+      "source": [
+        "pwd"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/practica-bash-1/1/1-1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OIHCwFCnQOyQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "61a9d2f3-acad-4105-872b-e528d5cc4767"
+      },
+      "source": [
+        "mv * ../../3/3-3/"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mv: cannot stat '*': No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XZ5LMp9tQX8Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "892c6248-428b-4cdf-d798-0653b564f2ff"
+      },
+      "source": [
+        "pwd"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/practica-bash-1/1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "scyJeFZLQzCe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3405739b-f65f-44da-da24-0ebc2f5a8f76"
+      },
+      "source": [
+        "cd .."
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/practica-bash-1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U0jmiaW7RQHk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "935891c8-dc87-49a2-f3bc-5d18fad68ead"
+      },
+      "source": [
+        "pwd"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/practica-bash-1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FUU0-jhxRWy4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        },
+        "outputId": "6428599a-e3a4-42f4-ad4c-0cf5b2ed50ea"
+      },
+      "source": [
+        "!tree"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".\n",
+            "├── 1\n",
+            "│   ├── 1-1\n",
+            "│   ├── 1-2\n",
+            "│   └── 1-3\n",
+            "├── 2\n",
+            "│   ├── 2-1\n",
+            "│   ├── 2-2\n",
+            "│   └── 2-3\n",
+            "└── 3\n",
+            "    ├── 3-1\n",
+            "    ├── 3-2\n",
+            "    └── 3-3\n",
+            "        ├── part-00001\n",
+            "        ├── part-00002\n",
+            "        ├── part-0001\n",
+            "        └── _SUCCESS\n",
+            "\n",
+            "12 directories, 4 files\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0VbsmxBYRhDL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
