--- a/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
+++ b/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
@@ -502,12 +502,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "935891c8-dc87-49a2-f3bc-5d18fad68ead"
+        "outputId": "fb713df0-c9c9-4da1-eb7e-7697c663b6a6"
       },
       "source": [
         "pwd"
       ],
-      "execution_count": 96,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 96
+          "execution_count": 103
         }
       ]
     },
@@ -569,15 +569,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0VbsmxBYRhDL",
+        "id": "jV57VpqRR2Cl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3ade81ba-68d2-4856-c2a9-49c566b105da"
       },
       "source": [
-        ""
+        "cd .."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ddNGj8goR5AI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6b137b61-d80d-4d1c-f314-ad38e919c20d"
+      },
+      "source": [
+        "ls"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mmkdir\u001b[0m/  part-0  part-2  \u001b[01;34mpractica-bash-1\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0VbsmxBYRhDL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ba3fe7e8-852d-4573-ad3b-e9e6f9f3c436"
+      },
+      "source": [
+        "!rm practica-bash-1"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "rm: cannot remove 'practica-bash-1': Is a directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
