--- a/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
+++ b/Taller_Gestión_de_archivos_y_directorios_en_Bash.ipynb
@@ -621,25 +621,13 @@
       "metadata": {
         "id": "0VbsmxBYRhDL",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "ba3fe7e8-852d-4573-ad3b-e9e6f9f3c436"
+        "colab": {}
       },
       "source": [
-        "!rm practica-bash-1"
+        "!rm -R practica-bash-1"
       ],
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "rm: cannot remove 'practica-bash-1': Is a directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
